<resources>
    <string name="app_name" translatable="false">English Now</string>
    <string name="login">Sign In</string>
    <string name="invalid_email">Not a valid email address!</string>
    <string name="invalid_username">Not a valid username!</string>
    <string name="invalid_password">Not a valid password!</string>
    <string name="email_password_incorrect">The email or password you entered is incorrect. Please try again.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Register</string>
    <string name="try_anonymous">Try anonymous</string>
    <string name="register">Register</string>
    <string name="input_email">Input email…</string>
    <string name="input_password">Input password…</string>
    <string name="re_input_password">Input password…</string>
    <string name="input_username">Input username…</string>
    <string name="re_password_not_match">Re-entered password does not match!</string>
    <string name="find">Find</string>
    <string name="find_a_speaker">Let find a speaker and practice speaking English</string>
    <string name="speaking_english_anytime_anywhere">Let\'s speak English anytime anywhere</string>

    <string name="intro_next">Next</string>
    <string name="intro_get_started">Get started</string>
    <string name="intro_skip">Skip</string>
    <string name="intro_title_welcome">Welcome to English Now</string>
    <string name="intro_title_always_learning">Always learning</string>
    <string name="intro_title_social_networking">Social Networking</string>
    <string name="intro_description_welcome">You\'re going to do great things with English Now</string>
    <string name="intro_description_social_networking">Connect to other people and share your interest</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="logout">Log out</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="version">version</string>
    <string name="project_info">English Now is an awesome Android app using OpenTok client sdk and NodeJS server, it allows a users to practice speaking, writing, chatting in English</string>
    <string name="link_blog">http://iceteaviet.com/</string>
    <string name="link_repo">https://github.com/USAssignmentWarehouse/EnglishNow-Android-MVVM</string>
    <string name="share">Share</string>
    <string name="matching">Matching</string>
    <string name="username_placeholder">hieutam22</string>
    <string name="your_ratings">Your ratings</string>
    <string name="newsfeed">Newsfeed</string>

    <string name="action_photo_pick">Add media</string>
    <string name="action_photo_take">Take photo</string>
    <string name="action_delete">Delete</string>
    <string name="error_media_upload_opening">That file could not be opened.</string>
    <string name="error_media_upload_size">The file must be less than 4MB.</string>
    <string name="error_media_upload_type">That type of file cannot be uploaded.</string>
    <string name="error_media_upload_permission">Permission to read media is required.</string>
    <string name="error_media_download_permission">Permission to store media is required.</string>
    <string name="error_media_upload_image_or_video">Images and videos cannot both be attached to the same status.</string>
    <string name="error_media_upload_sending">The upload failed.</string>
    <string name="error_report_too_few_statuses">At least one status must be reported.</string>
    <string name="user_auth_not_found">User authentication not found!</string>
    <string name="whats_happen">What\'s happened?</string>
    <string name="status">Status</string>
    <string name="video_status">Video</string>
    <string name="oops_nothing_here">Oops, seem like there is nothing here...</string>
</resources>
