<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_item_profile"
            android:checked="true"
            android:icon="@drawable/ic_profile_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_item_newsfeed"
            android:checked="true"
            android:icon="@drawable/news"
            android:title="@string/newsfeed" />
        <item
            android:id="@+id/nav_item_matching"
            android:checked="true"
            android:icon="@drawable/ic_group_people"
            android:title="@string/matching" />
        <item
            android:id="@+id/nav_item_about"
            android:checked="true"
            android:icon="@drawable/ic_about_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_item_logout"
            android:checked="true"
            android:icon="@drawable/ic_logout_24dp"
            android:title="@string/logout" />
    </group>
</menu>