<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.iceteaviet.englishnow.ui.about.viewmodel.AboutViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrey900"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center|start"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/navBackBtn"
                style="@style/Button.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:background="@android:color/transparent"
                android:onClick="@{() -> viewModel.onNavBackClick()}"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/ic_keyboard_backspace" />

            <TextView
                style="@style/TextStyle.Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/about"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            style="@style/TextStyle.Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autoLink="web"
            android:padding="20dp"
            android:text="@string/project_info"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_blog"
            style="@style/TextStyle.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autoLink="web"
            android:padding="10dp"
            android:text="@string/link_blog"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_repo"
            style="@style/TextStyle.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:padding="10dp"
            android:text="@string/link_repo"
            android:textColor="@android:color/white" />
    </LinearLayout>

</layout>